# whatsapp-mcp

./: .env.example  .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  ROADMAP.md  SECURITY.md  docker-compose.yml  release-please-config.json  server.json
.claude/: settings.local.json
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/scripts/: check_versions.py
.github/workflows/: ci.yml  dependabot-auto-merge.yml  pr-title.yml  release-please.yml  release.yml  security.yml
.specs/brain/_pending/: 7b257225-143b-455e-8664-8f6ecf0d68ab.md
.specs/features/: SPEC-WAMCP-001_whatsapp_remote_mcp.md
.specs/wbs/: MISSION-2026-389_wbs.yaml
docs/: RELEASING.md
scripts/: install-launchd-macos.sh  uninstall-launchd-macos.sh
scripts/tests/: test-launchd-macos.sh
soul-bot/: .dockerignore  Dockerfile  README.md  SOUL.md  config.example.yaml  pyproject.toml
soul-bot/soul_bot/: __init__.py  app.py  bridge.py  config.py  db.py  llm.py  media.py  vision.py
soul-bot/tests/: conftest.py  test_app.py
whatsapp-bridge/: .dockerignore  .golangci.yml  Dockerfile  auth.go  auth_test.go  go.mod  go.sum  main.go  main_test.go  media_path.go  media_path_test.go  package-lock.json  start-bridge.bat  start-full-history.bat  webhook.go  webhook_test.go
whatsapp-mcp-server/: audio.py  bridge.py  main.py  mcp_config.py  pyproject.toml  whatsapp.py
whatsapp-mcp-server/tests/: __init__.py  test_bridge_auth.py  test_bridge_autostart.py  test_bridge_token_path.py  test_get_contact.py  test_get_poll_results.py  test_list_chats.py  test_list_polls.py  test_message_context_tool.py  test_send_poll.py  test_transport.py  test_vote_poll.py  test_whatsapp.py
