[project]
name = "whatsapp-soul-bot"
version = "0.1.0"
description = "WhatsApp support-group sidecar bot for the WhatsApp MCP bridge"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.124.0",
    "httpx>=0.28.1",
    "pydantic>=2.12.0",
    "pyyaml>=6.0.3",
    "uvicorn[standard]>=0.38.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=9.0.3",
]

[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["soul_bot*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
