[project]
name = "whatsapp-mcp-server"
version = "0.1.0"
description = "WhatsApp integration for Claude via Model Context Protocol (MCP)"
requires-python = ">=3.11"
license = "MIT"
authors = [
    { name = "Very Good Plugins", email = "support@verygoodplugins.com" }
]
keywords = ["whatsapp", "mcp", "claude", "ai", "messaging"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "httpx>=0.28.1",
    "mcp[cli]>=1.6.0",
    "requests>=2.32.3",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
    "ruff>=0.8.0",
]

[project.urls]
Homepage = "https://github.com/verygoodplugins/whatsapp-mcp"
Repository = "https://github.com/verygoodplugins/whatsapp-mcp"
Issues = "https://github.com/verygoodplugins/whatsapp-mcp/issues"

[tool.setuptools]
py-modules = ["main", "whatsapp", "audio"]

[tool.ruff]
line-length = 120
target-version = "py311"

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "F",   # pyflakes
    "I",   # isort
    "N",   # pep8-naming
    "W",   # pycodestyle warnings
    "UP",  # pyupgrade
]
ignore = [
    "E501",  # line too long (handled by formatter)
]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
